--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.8.6",
     "@reach-sh/stdlib": "^0.1.11-rc.1",
+    "firebase": "^9.9.0",
     "framer-motion": "^6.3.16",
     "next": "12.1.6",
     "react": "18.2.0",
@@ -22,7 +23,8 @@
     "react-swipeable-views": "^0.14.0",
     "react-swipeable-views-utils": "^0.14.0",
     "sass": "^1.53.0",
-    "styled-components": "^5.3.5"
+    "styled-components": "^5.3.5",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/node": "18.0.0",
