--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
     "@emotion/styled": "^11.9.3",
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.8.6",
-    "@reach-sh/stdlib": "^0.1.11-rc.1",
+    "@reach-sh/stdlib": "^0.1.11-rc.2",
     "firebase": "^9.9.0",
     "framer-motion": "^6.3.16",
+    "fs": "^0.0.1-security",
     "next": "12.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
